{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 42,
  "lineage": "0bd7dfba-51bb-9ac9-c0f3-19fa3f94c796",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08a6efd148b1f7504",
            "arn": "arn:aws:ec2:us-east-1:508325854876:instance/i-05b5ec9b297349bd6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b5ec9b297349bd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0214693714c2ef981",
            "private_dns": "ip-10-10-0-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.198",
            "public_ip": "34.239.112.108",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IAC": "terraform",
                  "env": "dev"
                },
                "tags_all": {
                  "IAC": "terraform",
                  "env": "dev"
                },
                "throughput": 125,
                "volume_id": "vol-023e4337409e0b6cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6a50c11f5db69c1",
            "tags": {
              "Name": "ec2_instance_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "ec2_instance_virginia",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062121eb43a5effe5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_security_group_virginia",
            "aws_subnet.public_subnet_virginia",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.terraform_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:internet-gateway/igw-0b67e323e73ec3c3a",
            "id": "igw-0b67e323e73ec3c3a",
            "owner_id": "508325854876",
            "region": "us-east-1",
            "tags": {
              "Name": "igw_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "igw_virginia",
              "env": "dev"
            },
            "vpc_id": "vpc-0581076124f5a7b5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:route-table/rtb-0ca0dbb7b5b74089c",
            "id": "rtb-0ca0dbb7b5b74089c",
            "owner_id": "508325854876",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b67e323e73ec3c3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "public_route_table_virginia",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581076124f5a7b5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030abdbc476c422aa",
            "region": "us-east-1",
            "route_table_id": "rtb-0ca0dbb7b5b74089c",
            "subnet_id": "subnet-0d6a50c11f5db69c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_virginia",
            "aws_route_table.public_route_table_virginia",
            "aws_subnet.public_subnet_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:security-group/sg-062121eb43a5effe5",
            "description": "Security group for EC2 instance in Virginia",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062121eb43a5effe5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_security_group_virginia",
            "name_prefix": "",
            "owner_id": "508325854876",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "ec2_security_group_virginia",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581076124f5a7b5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:subnet/subnet-0e3cb9862c5ee673f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3cb9862c5ee673f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508325854876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "private_subnet_virginia",
              "env": "dev"
            },
            "vpc_id": "vpc-0581076124f5a7b5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:subnet/subnet-0d6a50c11f5db69c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a50c11f5db69c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508325854876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "public_subnet_virginia",
              "env": "dev"
            },
            "vpc_id": "vpc-0581076124f5a7b5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:vpc/vpc-0581076124f5a7b5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07c4d164d9f6856fb",
            "default_route_table_id": "rtb-0ab03c3f8ba2356a3",
            "default_security_group_id": "sg-09ea8238bea593a64",
            "dhcp_options_id": "dopt-0f689275",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0581076124f5a7b5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab03c3f8ba2356a3",
            "owner_id": "508325854876",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc_virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "vpc_virginia",
              "env": "dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}